# ansflow-backend

./: .gitignore  CLAUDE.md  Dockerfile.worker  README.md  ansflow-beat.yaml  ansflow-worker.yaml  docker-compose.yml  manage.py  pyproject.toml  schema.yml
.claude/rules/: api-development.md  celery-tasks.md  configuration.md  django-app.md  git-workflow.md  permissions.md  security.md  testing.md  websockets.md
apps/approval_center/: engine.py  models.py  serializers.py  views.py
apps/auth/: urls.py  views.py
apps/config_center/: apps.py  models.py  serializers.py  urls.py  views.py
apps/credentials_management/: apps.py  models.py  serializers.py  views.py
apps/host_management/: apps.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/k8s_management/: apps.py  models.py  serializers.py
apps/pipeline_management/: apps.py  consumers.py  models.py  serializers.py  (+3 more)
config/: __init__.py  api_router.py  asgi.py  celery.py  routing.py  urls.py  wsgi.py
helm_charts/: ansflow-redis-0.1.0.tgz  app-nginx-0.1.0.tgz  my-test-0.1.0.tgz  my-test-0.1.1.tgz  my-test-0.1.2.tgz  my-test-0.1.3.tgz  my-test-0.1.6.tgz  my-test-0.1.7.tgz
logs/: ansflow-error.log.20260417  ansflow-error.log.20260421  ansflow.log.20260417  ansflow.log.20260418  ansflow.log.20260419  ansflow.log.20260421
utils/: auth_views.py  base_model.py  config_broadcast.py  config_manager.py  config_subscribers.py  encryption.py  exception_handler.py  fields.py  logic.py  middleware.py  pagination.py  rbac_permission.py  renderers.py  schema.py  signals.py  webhook_security.py
(+86 files in other folders)
